--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -69,7 +69,7 @@
                     <article class="game">
                         <div class="container-img">
                             <a href="/products/<%= products[index].id %>">
-                            <img class="imagen" src= <%= "/images/productImages/"+ products[index].image_Secundaria %>  alt= "/images/productImages/"<%= products[index].image_Secundaria %>>
+                            <img class="imagen" src= <%= "/images/productImages/"+ products[index].ImagenSecundaria %>  alt= "/images/productImages/"<%= products[index].ImagenSecundaria %>>
                         </a>
                         </div>
 
