Implementé Sweet alert

--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -173,6 +173,7 @@
         <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
     </main>
     <script src="/js/validationSignUp.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <%- include('./partials/footer') %> 
 </body>
 
