FIXED sweet alert link html

--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -15,13 +15,13 @@
                 <article class="article-fianriel"> 
                     <div>
                         <input placeholder= 'Nombre' name="nombre" type="text" placholder="Tu Nombre" class="input-fianriel" id="name">                            
-                            <div class="text-danger">
-                            </div>  
+                            <small class="text-danger" id="text-danger-name">
+                            </small>  
                     </div>
                     <div>
                         <input placeholder= 'Apellido' name="apellido" type="text" placholder="Tu Apellido" class="input-fianriel" id="apellido">
                             
-                            <div class="text-danger" id="text-danger-name">
+                            <div class="text-danger" id="text-danger-last-name">
                             </div>  
                     </div>
                     <div>
@@ -162,7 +162,7 @@
 
 
 
-                <button type="submit" class="send-buttom">Confirmar Registro</button>
+                <button type="submit" class="send-buttom" id="button">Confirmar Registro</button>
 
 
 
