fixed empty space signup

--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -14,18 +14,18 @@
             <section class="section-fianriel">
                 <article class="article-fianriel"> 
                     <div>
-                        <input placeholder= 'Nombre' name="nombre" type="text" placholder="Tu Nombre" class="input-fianriel" id="name" value="<%= locals.oldData ? oldData.nombre : null  %>>                            
+                        <input placeholder= 'Nombre' name="nombre" type="text" placholder="Tu Nombre" class="input-fianriel" id="name" value="<%= locals.oldData ? oldData.nombre : null  %>">                            
                             <small class="text-danger" id="text-danger-name">
                             </small>  
                     </div>
                     <div>
-                        <input placeholder= 'Apellido' name="apellido" type="text" placholder="Tu Apellido" class="input-fianriel" id="apellido" value="<%= locals.oldData ? oldData.apellido : null  %> ">
+                        <input placeholder= 'Apellido' name="apellido" type="text" placholder="Tu Apellido" class="input-fianriel" id="apellido" value="<%= locals.oldData ? oldData.apellido : null  %>">
                             
                             <div class="text-danger" id="text-danger-last-name">
                             </div>  
                     </div>
                     <div>
-                        <input placeholder= 'DNI' name="dni" type="number" class="input-fianriel" id="dni" value="<%= locals.oldData ? oldData.dni : null  %> ">
+                        <input placeholder= 'DNI' name="dni" type="number" class="input-fianriel" id="dni" value="<%= locals.oldData ? oldData.dni : null  %>">
                             
                             <div class="text-danger">
                             </div>  
@@ -41,14 +41,14 @@
 
                 <article class="article-fianriel">
                     <div>
-                        <input placeholder="Usuario" type="text" name="usuario" class="input-fianriel" id="user" value="<%= locals.oldData ? oldData.usuario : null  %> ">
+                        <input placeholder="Usuario" type="text" name="usuario" class="input-fianriel" id="user" value="<%= locals.oldData ? oldData.usuario : null  %>">
                             
                             <div class="text-danger">
                             </div>  
                     </div>
 
                     <div>
-                        <input placeholder="Mail" type="email" name="email" class="input-fianriel" id="email" value="<%= locals.oldData ? oldData.email : null  %> ">
+                        <input placeholder="Mail" type="email" name="email" class="input-fianriel" id="email" value="<%= locals.oldData ? oldData.email : null  %>">
                             
                             <div class="text-danger">
                             </div>  
@@ -117,7 +117,7 @@
 
                 <article class="article-fianriel">
                     <div>
-                        <input placeholder= 'Dirección' type="text" name="direccion" class="input-fianriel" id="direccion" value="<%= locals.oldData ? oldData.direccion : null  %> ">
+                        <input placeholder= 'Dirección' type="text" name="direccion" class="input-fianriel" id="direccion" value="<%= locals.oldData ? oldData.direccion : null  %>">
                             
                             <div class="text-danger">
                             </div>  
