[EDIT] CRUD USUARIO

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -17,7 +17,7 @@
         </div>
         <% if (locals.isLogged) { %>
             <div class="logged">
-                <a href="/user/profile"><div class="userLogged"><%= locals.userLogged.usuario %><img class= "imgAvatarHeader" src="/images/avatars/<%=locals.userLogged.avatar %> "></a> / <a href= "/user/log-out">Log out  </a><i  id='fas' class="fas fa-gamepad"></i></div>
+                <a href="/user/profile"><div class="userLogged"><%= locals.userLogged.usuario %><img class= "imgAvatarHeader" src="/images/avatars/<%=locals.userLogged.avatar.ruta %> "></a> / <a href= "/user/log-out">Log out  </a><i  id='fas' class="fas fa-gamepad"></i></div>
             </div>
             <% } else { %> 
                 <div class="log-sign">
